--- a/details.html
+++ b/details.html
@@ -8,8 +8,8 @@
 <div id="wrapper">
 
         <header id="header">
-          <h1>User</h1>
-          <p>Welcome to leave hive</p>
+          <h1>Leave details </h1>
+          <!-- <p></p> -->
         </header>
 
         <div id="main">
@@ -18,7 +18,7 @@
           <ul>
             <li><a href="index.php">Home</a></li>
             <li><a href="details.html"  class="active" >Leave deatils</a></li>
-         
+
 
           </ul>
         </nav>
@@ -28,7 +28,7 @@
 
 
 <header class="major">
-  
+
                   <h2>Leave details</h2>
                 </header>
                 <center>
@@ -41,7 +41,7 @@
                   <li>
                     <span class="icon major style3 fa-diamond"></span>
                     <h3><b>Earn Leave</b></h3>
-                    <p>Earn Leave : 15 leaves per semester 
+                    <p>Earn Leave : 15 leaves per semester
                        Note: It needs confirmation from HOD as well as Registar of this college.</p>
                   </li>
                   <li>
