--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Home</title>
+<head><title>About Us</title>
 	<link rel="stylesheet" href="assets/css/main.css" /></head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
@@ -10,8 +10,8 @@
 <div id="wrapper">
 
         <header id="header">
-          <h1>User</h1>
-          <p>Welcome to leave hive</p>
+          <h1>About us</h1>
+
         </header>
 
         <div id="main">
@@ -21,7 +21,7 @@
             <li><a href="index.php">Home</a></li>
             <li><a href="feedback.php">Feedback</a></li>
             <li><a href="about.html"  class="active" >About us</a></li>
-         
+
 
           </ul>
         </nav>
@@ -31,8 +31,37 @@
 
 
 
+																	<h2>About Leave hive </h2>
+																	<p>Leave hive a online portal for our respected teachers to apply their leave online and get response over the internet without going anywhere and filling any kind of pen paper form.
+																	We bring every process online such as history of every employee who has taken a leave. and given every user option to check there leave is approved or not and check how many leave they still remaining.
+																 </p>
 
-            </section>
+																	<hr>
+																	<h2>Credit</h2>
+																	<p>We are the group of 4 people each have their own task assigned and everyone has done good job in their own manner.
+																		we all are from same college <b> Motilal Nehru National institute of technology Prayagraj</b>. This was a group project given by our respective teachers in the 5<sup>th</sup> semester.
+																	</p>
+<hr>
+
+
+
+										<h2>Our Team</h2>
+
+										<div class="box alt">
+											<div class="row uniform">
+
+												<div class="3u"><span class="image fit"><img src="images/tripti.jpg" alt="" /> Tripti</span></div>
+												<div class="3u"><span class="image fit"><img src="images/vikrant.jpg" alt="" />Vikrant</span></div>
+												<div class="3u"><span class="image fit"><img src="images/vinay.jpg" alt="" />VInay</span></div>
+												<div class="3u$"><span class="image fit"><img src="images/vaishali.jpg" alt="" />Vaishali</span></div>
+											</div>
+										</div>
+
+																</section>
+
+
+
+
 
         </div>
 
